--- a/Source/Framework/Framework.vcxproj.filters
+++ b/Source/Framework/Framework.vcxproj.filters
@@ -76,5 +76,8 @@
     <None Include="Code\Source Development Kit\Application Programming Interfaces\Cryptography.inl">
       <Filter>Header Files</Filter>
     </None>
+    <None Include="Code\Source Development Kit\Application Programming Interfaces\Connectivity.inl">
+      <Filter>Header Files</Filter>
+    </None>
   </ItemGroup>
 </Project>
