--- a/Source/Framework/Framework.vcxproj
+++ b/Source/Framework/Framework.vcxproj
@@ -93,6 +93,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="Code\Development Environment\Build Output Wrapper.hpp" />
     <ClInclude Include="Code\Development Environment\Entry Manager.hpp" />
     <ClInclude Include="Code\Development Environment\Logging.hpp" />
     <ClInclude Include="Code\Development Environment\Standard Library.hpp" />
@@ -105,7 +106,6 @@
     <ClInclude Include="Code\Framework.hpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="Code\Development Environment\Entry Manager.cpp" />
     <ClCompile Include="Code\Development Environment\Logging.cpp" />
     <ClCompile Include="Code\Source Development Kit\Application Programming Interfaces\Connectivity.cpp" />
     <ClCompile Include="Code\Source Development Kit\Application Programming Interfaces\Cryptography.cpp" />
