--- a/Source/Framework/Framework.vcxproj
+++ b/Source/Framework/Framework.vcxproj
@@ -105,7 +105,7 @@
     <ClInclude Include="Code\Source Development Kit\Application Programming Interfaces\Drawing.hpp" />
     <ClInclude Include="Code\Source Development Kit\Application Programming Interfaces\Filesystem.hpp" />
     <ClInclude Include="Code\Source Development Kit\Application Programming Interfaces\Input.hpp" />
-    <ClInclude Include="Code\Source Development Kit\Application Programming Interfaces\Interface.hpp" />
+    <ClInclude Include="Code\Source Development Kit\Toolkits\GUI\Interface.hpp" />
     <ClInclude Include="Code\Source Development Kit\Application Programming Interfaces\Utilities.hpp" />
     <ClInclude Include="Code\Source Development Kit\Application Programming Interfaces\Window.hpp" />
     <ClInclude Include="Precompile.hpp" />
@@ -119,7 +119,7 @@
     <ClCompile Include="Code\Source Development Kit\Application Programming Interfaces\Drawing.cpp" />
     <ClCompile Include="Code\Source Development Kit\Application Programming Interfaces\Filesystem.cpp" />
     <ClCompile Include="Code\Source Development Kit\Application Programming Interfaces\Input.cpp" />
-    <ClCompile Include="Code\Source Development Kit\Application Programming Interfaces\Interface.cpp" />
+    <ClCompile Include="Code\Source Development Kit\Toolkits\GUI\Interface.cpp" />
     <ClCompile Include="Code\Source Development Kit\Application Programming Interfaces\Utilities.cpp" />
     <ClCompile Include="Code\Source Development Kit\Application Programming Interfaces\Window.cpp" />
     <ClCompile Include="Precompile.cpp">
@@ -130,7 +130,7 @@
   <ItemGroup>
     <None Include="Code\Source Development Kit\Application Programming Interfaces\Connectivity.inl" />
     <None Include="Code\Source Development Kit\Application Programming Interfaces\Cryptography.inl" />
-    <None Include="Code\Source Development Kit\Application Programming Interfaces\Interface.inl" />
+    <None Include="Code\Source Development Kit\Toolkits\GUI\Interface.inl" />
     <None Include="Code\Source Development Kit\Application Programming Interfaces\Utilities.inl" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
