--- a/Source/Framework/Framework.vcxproj.filters
+++ b/Source/Framework/Framework.vcxproj.filters
@@ -13,6 +13,7 @@
     <ClCompile Include="Precompile.cpp" />
     <ClCompile Include="Code\Source Development Kit\Toolkits\Resource Manager.cpp" />
     <ClCompile Include="Code\Source Development Kit\Toolkits\Graphical User Interface.cpp" />
+    <ClCompile Include="Code\Source Development Kit\Toolkits\Memory Manager.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Code\Development Environment\Build Output Wrapper.hpp" />
@@ -33,6 +34,7 @@
     <ClInclude Include="Code\Development Environment\Font Awesome Icons.hpp" />
     <ClInclude Include="Code\Source Development Kit\Toolkits\Resource Manager.hpp" />
     <ClInclude Include="Code\Source Development Kit\Toolkits\Graphical User Interface.hpp" />
+    <ClInclude Include="Code\Source Development Kit\Toolkits\Memory Manager.hpp" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Code\Source Development Kit\Application Programming Interfaces\Connectivity.inl" />
