--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,3 @@
-TestResult.xml
-dlldata.c
-project.lock.json
-license.px
-
 **/desktop.ini
 [Bb]uild[Ll]og.*
 
@@ -68,6 +63,10 @@ ipch/
 *.gpState
 *.[Rr]e[Ss]harper
 *.DotSettings.user
+
+Source/VMProtect/*.exe
+Source/VMProtect/*.dll
+Source/VMProtect/*.map
 
 !/Server/
 !/Server/*
