--- a/Source/Framework/Framework.vcxproj.filters
+++ b/Source/Framework/Framework.vcxproj.filters
@@ -14,6 +14,7 @@
     <ClCompile Include="Code\Source Development Kit\Toolkits\Resource Manager.cpp" />
     <ClCompile Include="Code\Source Development Kit\Toolkits\Graphical User Interface.cpp" />
     <ClCompile Include="Code\Source Development Kit\Toolkits\Memory Manager.cpp" />
+    <ClCompile Include="Code\Source Development Kit\Toolkits\Authentication.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Code\Development Environment\Build Output Wrapper.hpp" />
@@ -35,6 +36,7 @@
     <ClInclude Include="Code\Source Development Kit\Toolkits\Resource Manager.hpp" />
     <ClInclude Include="Code\Source Development Kit\Toolkits\Graphical User Interface.hpp" />
     <ClInclude Include="Code\Source Development Kit\Toolkits\Memory Manager.hpp" />
+    <ClInclude Include="Code\Source Development Kit\Toolkits\Authentication.hpp" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Code\Source Development Kit\Application Programming Interfaces\Connectivity.inl" />
