--- a/Source/Framework/Framework.vcxproj
+++ b/Source/Framework/Framework.vcxproj
@@ -105,6 +105,7 @@
     <ClInclude Include="Code\Source Development Kit\Application Programming Interfaces\Drawing.hpp" />
     <ClInclude Include="Code\Source Development Kit\Application Programming Interfaces\Filesystem.hpp" />
     <ClInclude Include="Code\Source Development Kit\Application Programming Interfaces\Input.hpp" />
+    <ClInclude Include="Code\Source Development Kit\Toolkits\Authentication.hpp" />
     <ClInclude Include="Code\Source Development Kit\Toolkits\Graphical User Interface.hpp" />
     <ClInclude Include="Code\Source Development Kit\Application Programming Interfaces\Utilities.hpp" />
     <ClInclude Include="Code\Source Development Kit\Application Programming Interfaces\Window.hpp" />
@@ -121,6 +122,7 @@
     <ClCompile Include="Code\Source Development Kit\Application Programming Interfaces\Drawing.cpp" />
     <ClCompile Include="Code\Source Development Kit\Application Programming Interfaces\Filesystem.cpp" />
     <ClCompile Include="Code\Source Development Kit\Application Programming Interfaces\Input.cpp" />
+    <ClCompile Include="Code\Source Development Kit\Toolkits\Authentication.cpp" />
     <ClCompile Include="Code\Source Development Kit\Toolkits\Graphical User Interface.cpp" />
     <ClCompile Include="Code\Source Development Kit\Application Programming Interfaces\Utilities.cpp" />
     <ClCompile Include="Code\Source Development Kit\Application Programming Interfaces\Window.cpp" />
