--- a/Source/Framework/Framework.vcxproj.filters
+++ b/Source/Framework/Framework.vcxproj.filters
@@ -45,5 +45,6 @@
     <None Include="Code\Source Development Kit\Application Programming Interfaces\Cryptography.inl" />
     <None Include="Code\Source Development Kit\Application Programming Interfaces\Utilities.inl" />
     <None Include="Code\Source Development Kit\Toolkits\Graphical User Interface.inl" />
+    <None Include="Code\Source Development Kit\Toolkits\Memory Manager.inl" />
   </ItemGroup>
 </Project>
