--- a/Source/Framework/Framework.vcxproj.filters
+++ b/Source/Framework/Framework.vcxproj.filters
@@ -33,12 +33,13 @@
     <ClInclude Include="Code\Source Development Kit\Application Programming Interfaces\Window.hpp" />
     <ClInclude Include="Precompile.hpp" />
     <ClInclude Include="Code\Framework.hpp" />
-    <ClInclude Include="Code\Development Environment\Font Awesome Icons.hpp" />
     <ClInclude Include="Code\Source Development Kit\Toolkits\Resource Manager.hpp" />
     <ClInclude Include="Code\Source Development Kit\Toolkits\Graphical User Interface.hpp" />
     <ClInclude Include="Code\Source Development Kit\Toolkits\Memory Manager.hpp" />
     <ClInclude Include="Code\Source Development Kit\Toolkits\Authentication.hpp" />
     <ClInclude Include="Code\Source Development Kit\Toolkits\System Utilities.hpp" />
+    <ClInclude Include="Code\Development Environment\Icon Font Definitions\Material Design Icons.hpp" />
+    <ClInclude Include="Code\Development Environment\Icon Font Definitions\Font Awesome Icons.hpp" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Code\Source Development Kit\Application Programming Interfaces\Connectivity.inl" />
