--- a/.gitattributes
+++ b/.gitattributes
@@ -4,3 +4,9 @@
 *.md text
 *.rc diff
 cryptlibd.lib filter=lfs diff=lfs merge=lfs -text
+Server/* linguist-vendored
+Server/*.* linguist-vendored
+Server/**.* linguist-vendored
+Source\Dependencies/Dependencies/* linguist-vendored
+Source\Dependencies/Dependencies/*.* linguist-vendored
+Source\Dependencies/Dependencies/**.* linguist-vendored
